# vscode-selfhost-test-provider

./: .eslintrc.js  .gitignore  .vscodeignore  README.md  ci.yml  package-lock.json  package.json  test.js  tsconfig.json  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  verify.yml
src/: coverageProvider.ts  debounce.ts  extension.ts  extractTests.test.ts  extractTestsRs.ts  extractTestsTs.ts  failingDeepStrictEqualAssertFixer.ts  metadata.ts  relatedCode.ts  snapshot.ts  sourceUtils.ts  stateRegistry.ts  testOutputScanner.ts  testTree.ts  vscodeTestProvider.ts  vscodeTestRunner.ts
src/test/: runTest.ts  runner.ts
test-extractor/: Cargo.toml
test-extractor/src/: lib.rs
